Trying to figure out the base url stuff

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ function isSelected($pn, $link) {
 	<title>Splattered</title>
 
 
-	<link rel="stylesheet" type="text/css" href="<?= BASE_URL ?>/public/css/styles.css">
+	<link rel="stylesheet" type="text/css" href="public/css/styles.css">
   <link rel="stylesheet" type="text/css" href="<?= BASE_URL ?>/public/css/bubble.css">
   <script type="text/javascript">
 		var baseURL = '<?= BASE_URL ?>';
