--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@ function isSelected($pn, $link) {
   <script type="text/javascript">
 		var baseURL = '<?= BASE_URL ?>';
 	</script>
-  <script type="text/javascript" src="<?= BASE_URL ?>/public/js/jquery-3.1.0.min.js"></script>
-  <script type="text/javascript" src="<?= BASE_URL ?>/public/js/d3.v4.min.js"></script>
-  <script type="text/javascript" src="<?= BASE_URL ?>/public/js/bubble.js"></script>
-  <script type="text/javascript" src="<?= BASE_URL ?>/public/js/scripts.js"></script>
-	<link rel="icon" type="image/vnd.microsoft.icon" href="<?= BASE_URL ?>/public/img/favicon.ico" />
+  <script type="text/javascript" src="/public/js/jquery-3.1.0.min.js"></script>
+  <script type="text/javascript" src="/public/js/d3.v4.min.js"></script>
+  <script type="text/javascript" src="/public/js/bubble.js"></script>
+  <script type="text/javascript" src="/public/js/scripts.js"></script>
+	<link rel="icon" type="image/vnd.microsoft.icon" href="/public/img/favicon.ico" />
 </head>
 <body>
 <div id="wrapper">
@@ -32,7 +32,7 @@ function isSelected($pn, $link) {
 		<div id="header" style="margin-top:-15px">
 			<div id = "menubar">
 
-			<h1><a href="<?= BASE_URL ?>/"> <img src = "<?= BASE_URL ?>/public/img/logov2.png" alt="SPLATTERED"> </a></img></h1>
+			<h1><a href="http://ktaylorquinn.co/"> <img src = "/public/img/logov2.png" alt="SPLATTERED"> </a></img></h1>
 
 				<div id="search">
 				<ul id="primary-nav" style= "font-size: 15px;">
@@ -41,11 +41,11 @@ function isSelected($pn, $link) {
 					<li><a href="/photographs">Photographs</a></li>
 					<!--<li><a href="<?= BASE_URL ?>/working">Clothing & Accessories</a></li>-->
 					<!--<li><a href="<?= BASE_URL ?>/working">Home & Decor</a></li>-->
-					<li><a href="<?= BASE_URL ?>/blogs">Blog</a></li>
+					<li><a href="/blogs">Blog</a></li>
 
-					<?php if(isset($_SESSION['user']) && $_SESSION['user'] != '') { ?>
+					<!--<?php if(isset($_SESSION['user']) && $_SESSION['user'] != '') { ?>
 					<li><a href="profile/<?= $_SESSION['user'] ?>">Profile</a></li>
-					<?php } ?>
+					<?php } ?>-->
 
 
 					<li>	<!--  Start of View Cart Button Code  -->
@@ -57,8 +57,8 @@ function isSelected($pn, $link) {
 							<!-- Replace "business" value with your PayPal Email Address or Account ID -->
 							<input type="hidden" name="business" value="ktquinn13@gmail.com">
 							<!-- Replace value with the web page you want the customer to return to -->
-							<input type="hidden" name="shopping_url" value="http://www.splattered.me/Splattered">
-							<input type="image"  src="<?= BASE_URL ?>/public/img/cart.jpg" border="0" style="width: 20px;" name="submit" alt="View Cart">
+							<input type="hidden" name="shopping_url" value="http://ktaylorquinn.co/">
+							<input type="image"  src="public/img/cart.jpg" border="0" style="width: 20px;" name="submit" alt="View Cart">
 							<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 						</form>
 						<!--  End of View Cart Button Code  -->
@@ -195,17 +195,17 @@ a:hover {
    <div id= "tileImages" style="color: #777; background-color:white; text-align:center; text-align: center;">
     <ul id="tiles">
 
-          <li><a href="paintings"> <img class="tile" src="<?= BASE_URL ?>/public/img/paintingtile.jpg" alt="Painting pic"  style = "height:  "/> </a> </li>
+          <li><a href="paintings"> <img class="tile" src="/public/img/paintingtile.jpg" alt="Painting pic"  style = "height:  "/> </a> </li>
             <!--edited from the image found here: https://www.google.com/search?sa=G&hl=en&q=side+braid&tbm=isch&tbs=simg:CAQSlQEJoIMPJccrmF0aiQELEKjU2AQaAggDDAsQsIynCBpiCmAIAxIo6RmGD7cPyhnJELQPoQ_1UEIoP1w_1eMNkw3zDgMOEwyCXiMPM71S7bMBowfjlhgnYthk6MjBxNqmzMtdnOX039F_18vRhoU7RcO-UtPcjMMStEtTzbhNEEa_1j24IAQMCxCOrv4IGgoKCAgBEgQ_1pMqMDA&ved=0ahUKEwjt1MnGia7PAhXEez4KHQD9CHgQwg4IGygA-->
-          <li><a href="photography"><img class="tile" src="<?= BASE_URL ?>/public/img/photographertile.jpeg" alt="Photography pic" /></a> </li>
+          <li><a href="photography"><img class="tile" src="/public/img/photographertile.jpeg" alt="Photography pic" /></a> </li>
             <!--edited from the image found here: https://lh3.googleusercontent.com/OCWLteVrjHjzDUVIRRIbIrbYZuYXXzTSz0a0akUn0V1u4WPICt3dmR8X28sen953deeSTFQ=s85-->
-          <li><a href="blogs"><img class="tile" src="<?= BASE_URL ?>/public/img/blogtile.jpg" alt="Home Decor" /></a> </li>
+          <li><a href="blogs"><img class="tile" src="/public/img/blogtile.jpg" alt="Home Decor" /></a> </li>
             <!--edited from the image found here: https://lh3.googleusercontent.com/7S9F_10_tSqAwFJNUV3a0KJ0e8c-XZxTp_hxWP-DBHmocVRL7yXbwzIrLPCJjm-zgLdRmA=s85-->
 
     </ul>
   </div>
 
- <a href="<?= BASE_URL ?>/blogs" style="text-decoration:none">
+ <a href="/blogs" style="text-decoration:none">
 <div class="bgimg-2">
   <div class="caption">
  
@@ -263,7 +263,7 @@ a:hover {
 
 
 		<ul id="footerelements">
-			<li><a href="https://www.instagram.com"><img class="icon" src="<?= BASE_URL ?>/public/img/instagram.png" alt="INSTA" /></a>  <a href="https://www.pinterest.com"><img class="icon" src="<?= BASE_URL ?>/public/img/pinterest.png" alt="PINTEREST" /></a> <a href="https://www.facebook.com"><img class="icon" src="<?= BASE_URL ?>/public/img/facebook.png" alt="FACEBOOK" /></a>  <a href="https://www.twitter.com"><img class="icon" src="<?= BASE_URL ?>/public/img/twitter.png" alt="TWITTER" /></a> </li>
+			<li><a href="https://www.instagram.com"><img class="icon" src="/public/img/instagram.png" alt="INSTA" /></a>  <a href="https://www.pinterest.com"><img class="icon" src="/public/img/pinterest.png" alt="PINTEREST" /></a> <a href="https://www.facebook.com"><img class="icon" src="/public/img/facebook.png" alt="FACEBOOK" /></a>  <a href="https://www.twitter.com"><img class="icon" src="/public/img/twitter.png" alt="TWITTER" /></a> </li>
 
 			<!--Facebook logo: https://lh3.googleusercontent.com/jDhF56HdcROR2DOBcxL_yTwWU1SUz-Xlb7BLZ6cjzYftSxN-uzIdHosDdPeVL1grUy9piA=s85-->
 			<!--Twitter logo: https://lh3.googleusercontent.com/-EtGHtc8v9V5jC5Gf4N3XPA4PEf6WmjW11XzBaOHNTwRQc9Cbb09oXmfJj-c9_VN02LoCRY=s105-->
@@ -276,9 +276,9 @@ a:hover {
 			
 
       <!-- If the user is an admin -->
-			<?php }
+			<?php 
 
-			else {
+			
         $p = User::loadByUsername($_SESSION['user']);
 
         if($p->get('status') == 2) {
@@ -307,7 +307,7 @@ a:hover {
 
  			<div class="popup-content">
 	  		    <span class="close" onclick="loginClose()">×</span>
-	  		    <form  action="<?= BASE_URL ?>/footer/login" method="POST">
+	  		    <form  action="/footer/login" method="POST">
 	  		    <h2>Log in:</h2>
 				  Username:<br>
 				  <input type="text" name="un" placeholder="username" required>
@@ -329,7 +329,7 @@ a:hover {
     <div id="mySignupPopup" class="popup">
  			<div class="popup-content">
   		    <span class="close" onclick="signupClose()">×</span>
-  		    <form  action="<?= BASE_URL ?>/footer/signup" method="POST">
+  		    <form  action="/footer/signup" method="POST">
     		    <h2>Sign up:</h2>
             First Name:<br>
   				      <input type="text" name="fname" placeholder="Bobby" required>
@@ -371,7 +371,7 @@ a:hover {
  			<div class="popup-content">
 	  		    <span  class= "close" onclick="logoutClose()">×</span>
 
-	  		    <form  action="<?= BASE_URL ?>/footer/logout" method="POST">
+	  		    <form  action="/footer/logout" method="POST">
 	  		    <h2>Are you sure you want to log out?</h2>
 
 				  <input class = "close" type="submit" value="Log me out" >
